# muttlike-imap

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: openclaw.md  pattern-syntax.md  secrets.md
src/muttlike_imap/: __init__.py  __main__.py  cli.py  client.py  completions.py  config.py  dates.py  mailbox.py  output.py  parser.py  sizes.py
tests/: test_cli.py  test_client.py  test_completions.py  test_config.py  test_dates.py  test_mailbox.py  test_output.py  test_parser.py  test_sizes.py
